reject invalid urls